--- a/index.html
+++ b/index.html
@@ -33,16 +33,6 @@
         <input type="text" class="form-control input-lg" placeholder="lastfm username" name="lastfm-user" required rv-disabled="submitted">
       </div>
       <button type="submit" class="btn btn-primary btn-lg"  rv-disabled="submitted">Fetch tracks</button>
-      <br />
-      <div class="form-group">
-        <input type="checkbox" class="form-control input-lg" name="lastfm-include-mbid" id="lastfm-include-mbid" checked>
-        <label for="lastfm-include-mbid">Include column headers</label>
-      </div>
-      <br />
-      <div class="form-group">
-        <input type="checkbox" class="form-control input-lg" name="lastfm-include-mbid" id="lastfm-include-headers" checked>
-        <label for="lastfm-include-mbid">Include MusicBrainz ID</label>
-      </div>
     </form>
 
     <section id="results" rv-show="submitted" style="display:none">
@@ -95,6 +85,14 @@
               </label>
               <input type="text" class="form-control input-md" id="request-delay" placeholder="0"  rv-value="request_delay">
               <p class="help-block">(milliseconds, default 0) how long to wait between making requests</p>
+            </div>
+            <div class="form-group form-inline">
+              <input type="checkbox" class="form-control" name="lastfm-include-headers" id="lastfm-include-headers" checked="false">
+              <label for="lastfm-include-headers">Include column headers</label>
+            </div>
+              <div class="form-group form-inline">
+              <input type="checkbox" class="form-control" name="lastfm-include-mbid" id="lastfm-include-mbid" checked="false">
+              <label for="lastfm-include-mbid">Include MusicBrainz ID</label>
             </div>
           </div>
         </div>
