--- a/v2/index.html
+++ b/v2/index.html
@@ -1,10 +1,14 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>lastfm-to-csv</title>
-    </head>
-    <body>
-        <h1>lastfm to csv (v2)</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <script src="dist/main.js" type="module"></script>
-    </body>
+    <title>lastfm-to-csv</title>
+  </head>
+  <body>
+    <h1>lastfm to csv (v2)</h1>
+
+    <script src="dist/main.js" type="module"></script>
+  </body>
 </html>
