--- a/v2/index.html
+++ b/v2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="dist/main.css">
     <title>lastfm-to-csv</title>
   </head>
   <body>
