Styling and lighthouse

--- a/v2/index.html
+++ b/v2/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Convert your Last.fm data to CSV format effortlessly. Use this tool to fetch and format data from the Last.fm API.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/main.css">
     <title>lastfm-to-csv</title>
   </head>
   <body>
     <h1>lastfm to csv (v2)</h1>
-
     <script src="dist/main.js" type="module"></script>
   </body>
 </html>
